2001-11-27  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 02572]
	* main.c (_peekURL): initialize s when anchor not found

2001-11-27  aito@fw.ipsj.or.jp
	* Error correction on doc-jp/FAQ.html

2001-11-27  sakane@d4.bsd.nes.nec.co.jp (Yoshinobu Sakane)
	* w3m-doc update.

2001-11-26  Tsutomu Okada <okada@furuno.co.jp>
	
	* [w3m-dev 02537]
	* configure: s/$def_egd/def_use_egd/

2001-11-26  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 02556]
	* indep.c (strcasestr): strcasestr("", "") should not return NULL

	* [w3m-dev 02555]
	* configure: check strcasestr
	* fm.h (_GNU_SOURCE): requires for strcasestr()
	* indep.c (strcasestr): #ifdef HAVE_STRCASESTR
	* indep.c (strcasestr): check whether s2 is NULL
	* indep.h: add #include "config.h"
	* indep.h: #ifdef HAVE_STRCASESTR
	* indep.h: strcasestr() takes const char *

2001-11-26  Yoshinobu Sakane <sakane@d4.bsd.nes.nec.co.jp>

	* [w3m-dev 02553]
	* configure: SysV's tr requires '[a-z]' '[A-Z]'

2001-11-26  Kiyokazu SUTO <suto@ks-and-ks.ne.jp>

	* [w3m-dev 02547] "message/*" as a kind of text type
	* file.c (is_text_type): add message/*

2001-11-25  Kiyokazu SUTO <suto@ks-and-ks.ne.jp>

	* [w3m-dev 02535] Name conflicts in configure
	* configure: s/libdir/tlibdir/ for loop variables

2001-11-25  Dai Sato <satodai@dog.intcul.tohoku.ac.jp>

	* display.c: call of init_win32_console_handle is deleted

2001-11-25  Rin Okuyama <okuyama@cna.ne.jp>

	* [w3m-dev 02533] setpgrp bug in configure
	* configure: s/have_setpgrp/def_have_setpgrp/
	   s/setpgrp/def_setpgrp/

2001-11-24  Fumitoshi UKAI  <ukai@debian.or.jp>

	* Makefile (indent): indent
	* run make indent

2001-11-24  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 02530]
	* file.c (readHeader): NULL check for domain

2001-11-24  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 02529]
	* configure (ask_choice): fix bugs
	* configure (include_opt): disable as much as if baby model
	* configure: ask/def parameter after model selected
