@@ -1,3 +1,9 @@
+2001-11-28  Fumitoshi UKAI  <ukai@debian.or.jp>
+
+	* [w3m-dev 02571] MAXPATHLEN
+	* indep.c (currentdir): #ifdef MAXPATHLEN for GNU Hurd
+	* configure: ditto
+
 2001-11-27  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>
 
 	* [w3m-dev 02572]
